--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
                         <div class="skill-item">
                             <div class="flex justify-between mb-2">
                                 <span class="font-medium text-gray-700">Problem Solving</span>
-                                <span class="text-11qpurple-600 font-semibold">90%</span>
+                                <span class="text-purple-600 font-semibold">90%</span>
                             </div>
                             <div class="w-full bg-gray-200 rounded-full h-3">
                                 <div class="skill-bar bg-gradient-to-r from-purple-500 to-blue-500 h-3 rounded-full" style="--skill-width: 90%"></div>
@@ -758,3 +758,4 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'988e3212d052b5e7',t:'MTc1OTUxMjkyMi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
