--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
                         </svg>
                     </div>
                     <div class="p-6">
-                        <h4 class="text-xl font-semibold text-gray-900 mb-2">Steering Comitte Hyperduty IX 2023</h4>
+                        <h4 class="text-xl font-semibold text-gray-900 mb-2">Steering Comittee Hyperduty IX 2023</h4>
                             <p class="text-gray-600 mb-4 text-justify">Bertanggung jawab dan memastikan bahwa kegiatan berjalan sesuai dengan tujuan utama, membantu dalam pengambilan keputusan penting, dan memberikan arahan untuk kebijakan atau aturan yang relevan dan efisien, tetapi juga fokus pada pengawasan dan evaluasi keseluruhan acara. </p>
                         <div class="flex flex-wrap gap-2 mb-4">
                         </div>
@@ -477,7 +477,7 @@
   <img src="gambar/smanlicup.jpeg" alt="Foto Project" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h4 class="text-xl font-semibold text-gray-900 mb-2">Steering Comitte SMANLICUP 2023</h4>
+                        <h4 class="text-xl font-semibold text-gray-900 mb-2">Steering Comittee SMANLICUP 2023</h4>
                            <p class="text-gray-600 mb-4 text-justify">Bertanggung jawab dan memastikan bahwa kegiatan berjalan sesuai dengan tujuan utama, membantu dalam pengambilan keputusan penting, dan memberikan arahan untuk kebijakan atau aturan yang relevan dan efisien, tetapi juga fokus pada pengawasan dan evaluasi keseluruhan acara. </p>
                         <div class="flex flex-wrap gap-2 mb-4">
                         </div>
@@ -489,7 +489,7 @@
   <img src="gambar/campus goes.jpg" alt="Foto Project" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
-                        <h4 class="text-xl font-semibold text-gray-900 mb-2">Steering Comitte Campus Goes to Smanli 2023 </h4>
+                        <h4 class="text-xl font-semibold text-gray-900 mb-2">Steering Comittee Campus Goes to Smanli 2023 </h4>
                           <p class="text-gray-600 mb-4 text-justify">Bertanggung jawab dan memastikan bahwa kegiatan berjalan sesuai dengan tujuan utama, membantu dalam pengambilan keputusan penting, dan memberikan arahan untuk kebijakan atau aturan yang relevan dan efisien, tetapi juga fokus pada pengawasan dan evaluasi keseluruhan acara. </p>
                         <div class="flex flex-wrap gap-2 mb-4">
                         </div>
@@ -528,7 +528,7 @@
                     </div>
                     <div class="p-6">
                         <h4 class="text-xl font-semibold text-gray-900 mb-2">Staff Acara Breakout Goes to School 2023</h4>
-                        <p class="text-gray-600 mb-4 text-justify">Merancang, menyusun, mengatur, dan menjalankan rangkaian kegiatan Grand Closing FLF 2024 sesuai dengan tujuan yang telah ditetapkan, memastikan setiap aspek acara berjalan lancar, dan menciptakan pengalaman yang berkesan bagi peserta.</p>
+                        <p class="text-gray-600 mb-4 text-justify">Merancang, menyusun, mengatur, dan menjalankan rangkaian kegiatan Breakout Goes to School 2023 sesuai dengan tujuan yang telah ditetapkan, memastikan setiap aspek acara berjalan lancar, dan menciptakan pengalaman yang berkesan bagi peserta.</p>
                         <div class="flex flex-wrap gap-2 mb-4">
                         </div>
                     </div>
@@ -758,4 +758,5 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'988e3212d052b5e7',t:'MTc1OTUxMjkyMi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
