--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                     <a href="#home" class="text-gray-600 hover:text-purple-600 transition-colors">Beranda</a>
                     <a href="#about" class="text-gray-600 hover:text-purple-600 transition-colors">Tentang</a>
                     <a href="#skills" class="text-gray-600 hover:text-purple-600 transition-colors">Keahlian</a>
-                    <a href="#projects" class="text-gray-600 hover:text-purple-600 transition-colors">Proyek</a>
+                    <a href="#projects" class="text-gray-600 hover:text-purple-600 transition-colors">Kegiatan</a>
                     <a href="#contact" class="text-gray-600 hover:text-purple-600 transition-colors">Kontak</a>
                 </div>
                 <button id="mobile-menu-btn" class="md:hidden">
@@ -139,7 +139,7 @@
                 <a href="#home" class="block px-3 py-2 text-gray-600 hover:text-purple-600">Beranda</a>
                 <a href="#about" class="block px-3 py-2 text-gray-600 hover:text-purple-600">Tentang</a>
                 <a href="#skills" class="block px-3 py-2 text-gray-600 hover:text-purple-600">Keahlian</a>
-                <a href="#projects" class="block px-3 py-2 text-gray-600 hover:text-purple-600">Proyek</a>
+                <a href="#projects" class="block px-3 py-2 text-gray-600 hover:text-purple-600">Kegiatan</a>
                 <a href="#contact" class="block px-3 py-2 text-gray-600 hover:text-purple-600">Kontak</a>
             </div>
         </div>
@@ -566,7 +566,7 @@
         <div class="max-w-4xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16 fade-in">
                 <h3 class="text-4xl font-bold text-white mb-4">Mari Berkolaborasi</h3>
-                <p class="text-xl text-purple-100">Punya proyek menarik? Mari diskusikan dan wujudkan bersama!</p>
+                <p class="text-xl text-purple-100">Punya kegiatan menarik? Mari diskusikan dan wujudkan bersama!</p>
             </div>
             
             <div class="grid md:grid-cols-2 gap-12">
@@ -758,5 +758,6 @@
     </script>
 <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'988e3212d052b5e7',t:'MTc1OTUxMjkyMi4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
+
 
 
